# fae

./: README.md  docker-compose.yml
app/eth-wealth-token/: package.json
app/eth-wealth-token/contracts/: ERC223Interface.sol  Migrations.sol  Ownable.sol  WTDistributor.sol  WealthToken.sol
app/fat-wealth-token/: README.md
docs/: README.md
docs/fatips/: README.md  extendable-contract-storage.md
ethereum/: README.md
ethereum/client/: README.md  package.json  truffle-config.js
ethereum/client/contracts/: Ed25519.sol  FactomBridge.sol  FactomDecoder.sol  IFactomBridge.sol
ethereum/client/migrations/: 1_initial_migration.sol
ethereum/prover/: README.md
ethereum/relayer/: Cargo.toml  README.md
ethereum/relayer/src/: main.rs
factom/: README.md
factom/payments/: go.mod  go.sum  payments.go
factom/payments/eth/: transfer_details.go  transfer_log.go  util.go
factom/prover/: README.md
test/: README.md
test/eth-wealth-token/: README.md  truffle.js
test/eth-wealth-token/contracts/: BaseToken.sol  ERC223ReceivingContract.sol  SafeMath.sol
test/eth-wealth-token/migrations/: 2_deploy_contracts.js
test/fat-wealth-token/: wealth-token.issuance.js
web/: README.md  package.json
web/src/: App.tsx  config.js
web/src/actions/: TransferButton.tsx  UnlockButton.tsx  WalletSelector.tsx
web/src/components/: BridgeTokens.tsx  CustomTokenModal.tsx  FromToken.tsx  ToToken.tsx
web/src/contexts/: BridgeContext.tsx  Web3Context.tsx
web/src/icons/: NetworkIcon.tsx
web/src/lib/: constants.tsx
web/src/pages/: History.tsx  Home.tsx
